--- a/portfolio site.html
+++ b/portfolio site.html
@@ -25,11 +25,11 @@
 		<div class="col-xs-2 col-sm-2 col-md-2" id="section">
 			<br />
 			<img class="colors" src="http://www.colorcombos.com/images/colors/hex/757CB1.png" alt="color"><br />
-			<button><a href= "http://htmlcolorcodes.com"><h5 class= "color">#757CB1</h5></a></button>
+			<button class="btn btn-primary"><a href= "http://htmlcolorcodes.com"><h5 class= "color">#757CB1</h5></a></button>
 			<img class="colors" src="http://www.colorcombos.com/images/colors/hex/C4C4B9.png" alt="color"><br />
-			<button><a href= "http://htmlcolorcodes.com"><h5 class= "color">#C4C4B9</h5></a></button>
+			<button class="btn btn-primary"><a href= "http://htmlcolorcodes.com"><h5 class= "color">#C4C4B9</h5></a></button>
 			<img class="colors" src="http://www.colorcombos.com/images/colors/hex/F95C3C.png" alt="color"><br />
-			<button><a href= "http://htmlcolorcodes.com"><h5 class= "color">#F95C3C</h5></a></button>
+			<button class="btn btn-primary"><a href= "http://htmlcolorcodes.com"><h5 class= "color">#F95C3C</h5></a></button>
 		</div>
 		<div class="col-xs-10 col-sm-10 col-md-10" id="line">
 			<div class="hr">
